# atuin-web

./: .dockerignore  Cargo.toml  Dockerfile  Procfile.dev  README.md
.github/workflows/: ci.yml  release.yml
assets/css/: app.css
assets/js/: bip39.min.js  blake2b.min.js  decrypt.js  paseto-v4.js  paseto-v4.min.js  theme.js
crates/atuin-web/: Cargo.toml
crates/atuin-web-lib/: Cargo.toml
crates/atuin-web-lib/src/: app.rs  assets.rs  auth.rs  client.rs  config.rs  error.rs  lib.rs  templates.rs
crates/atuin-web-lib/src/routes/: calendar.rs  dashboard.rs  login.rs  logout.rs  mod.rs  records.rs  sync_status.rs  user.rs
crates/atuin-web-lib/tests/: assets_test.rs  auth_test.rs  client_test.rs  config_test.rs  dashboard_test.rs  error_test.rs  login_test.rs  logout_test.rs  records_test.rs  templates_test.rs
crates/atuin-web-lib/tests/common/: mod.rs
crates/atuin-web/src/: main.rs
docs/: README.md  api-mapping.md  architecture.md  configuration.md  deployment.md  development.md
src/: app.rs  assets.rs  client.rs  config.rs  main.rs  templates.rs
src/routes/: dashboard.rs  login.rs
templates/: 404.html  base.html  calendar.html  dashboard.html  login.html  records.html  records_index.html  sync_status.html  user.html
templates/partials/: alert.html  calendar_grid.html  dashboard_content.html  error_detail_modal.html  key_modal.html  pagination.html  record_table.html  sidebar.html  sync_detail.html  theme_toggle.html
tests/: app_test.rs  auth_test.rs  client_test.rs  config_test.rs  error_test.rs  login_test.rs  templates_test.rs
tests/common/: mod.rs
tests/unit/: test-decoders.html  test-paseto-v4.html
