[package]
name = "atuin-web-lib"
version.workspace = true
edition = "2021"

[features]
default = []
embed-templates = []

[dependencies]
axum = { workspace = true }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
reqwest = { workspace = true }
tower = { workspace = true }
tower-sessions = { workspace = true }
tracing = { workspace = true }
thiserror = { workspace = true }
uuid = { workspace = true }
minijinja = { workspace = true }
rust-embed = { workspace = true }
clap = { workspace = true }
mime_guess = { workspace = true }
humantime = { workspace = true }

[dev-dependencies]
axum-test = "19"
mockito = "1"
tower-sessions-memory-store = { workspace = true }
