[package]
name = "atuin-web"
version.workspace = true
edition = "2021"

[dependencies]
atuin-web-lib = { path = "../atuin-web-lib" }
axum = { workspace = true }
tokio = { workspace = true }
tower-sessions = { workspace = true }
tower-sessions-memory-store = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
clap = { workspace = true }
